chore: add railway build

--- a/.dockerignore
+++ b/.dockerignore
@@ -21,4 +21,6 @@ backend/.env
 backend/.env.local
 backend/.env.development.local
 backend/.env.test.local
-backend/.env.production.local 
+backend/.env.production.local
+# Don't ignore pnpm-lock.yaml
+!pnpm-lock.yaml 
