--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,34 +1,21 @@
-FROM node:18-alpine AS base
+FROM node:18-alpine
 
-# Install dependencies only when needed
-FROM base AS deps
+# Install pnpm
+RUN npm install -g pnpm
+
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
-RUN npm ci --only=production
+# Copy package files and install dependencies
+COPY package*.json pnpm-lock.yaml ./
+RUN pnpm install --frozen-lockfile
 
-# Build the app
-FROM base AS builder
-WORKDIR /app
+# Copy the rest of the application
 COPY . .
-COPY --from=deps /app/node_modules ./node_modules
 
-# Build Next.js app
-RUN npm run build:frontend
+# Build the application
+RUN pnpm run build:frontend
 
-# Production image
-FROM base AS runner
-WORKDIR /app
-
-ENV NODE_ENV=production
-
-# Copy built app
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/public ./public
-
+# Expose port and start
 EXPOSE 3000
 
-CMD ["npm", "start"] 
+CMD ["pnpm", "start"] 
