--- a/backend/package.json
+++ b/backend/package.json
@@ -125,6 +125,10 @@
     "typescript": "^5",
     "typescript-eslint": "^8.10.0"
   },
+  "engines": {
+    "node": ">=20.18.1",
+    "npm": ">=10.0.0"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
