--- a/backend/package.json
+++ b/backend/package.json
@@ -25,9 +25,8 @@
     "seed:all": "pnpm run seed seed",
     "seed:reset": "pnpm run seed reset"
   },
- "engines": {
-    "node": ">=20.0.0",
-    "npm": ">=9.0.0"
+  "engines": {
+    "node": "21.7.3"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.3",
