--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
   },
   "devDependencies": {
     "concurrently": "^9.2.0"
+  },
+  "engines": {
+    "node": ">=21.7.3",
+    "npm": ">=11.4.2"
   }
 }
