--- a/backend/package.json
+++ b/backend/package.json
@@ -141,5 +141,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+    "engines": {
+    "node": ">=21.7.3",
+    "npm": ">=11.4.2"
   }
 }
